# lab1_package

./: pyproject.toml
lab1_package/: data_collect.py  plotting.py
src/: __init__.py  filter.py
src/lab1_package/: plotting.py
