[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Nalini Kumar", email = "nalinikumar.devi@gmail.com"},
]
name = "lab1_package"
version = "0.1.4"
readme = "README.md"

[tool.setuptools]
packages = {find = {where = ["lab1_package"]}}
package-dir = {""="lab1_package"}